versão sem anexacao de imagem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jackson.time-zone=America/Sao_Paulo
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+jwt.lifetime.token= 74400000
+jwt.secret=unisenai-24
+admin.email=admin@admin.com
+admin.password=123456
