--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
-
-spring.application.name=destino
-spring.datasource.url=jdbc:postgresql://localhost:5432/finder
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.application.name=finder
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/finder?useTimezone=true&serverTimezone=GMT-3
+spring.datasource.username=root
+spring.datasource.password=12345
 spring.jackson.time-zone=America/Sao_Paulo
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
 
 
-jwt.lifetime.token= 74400000
+jwt.lifetime.token=74400000
 jwt.secret=unisenai-24
 admin.email=admin@admin.com
 admin.password=123456
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
